// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar should render actions toolbar 1`] = `
<div
  className="theme-tc-list-toolbar tc-list-toolbar"
>
  <div
    className="theme-tc-actionbar-container tc-actionbar-container nav"
  >
    <div
      className="theme-navbar-left navbar-left"
    >
      <button
        aria-label="Add"
        className="btn btn-primary"
        disabled={false}
        id="my-toolbar-actions-add"
        onClick={[Function]}
        onMouseDown={[Function]}
        role={null}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="theme-tc-svg-icon tc-svg-icon"
          focusable="false"
          name="talend-plus"
          title={null}
        >
          <use
            xlinkHref="#talend-plus"
          />
        </svg>
        <span>
          Add
        </span>
      </button>
    </div>
    <div
      className="theme-navbar-right navbar-right"
    >
      <ul />
    </div>
  </div>
</div>
`;

exports[`Toolbar should render actions toolbar with selected items 1`] = `
<div
  className="theme-tc-list-toolbar tc-list-toolbar"
>
  <div
    className="theme-tc-actionbar-container tc-actionbar-container nav"
  >
    <div
      className="theme-navbar-left navbar-left"
    >
      <span
        className="theme-tc-actionbar-selected-count tc-actionbar-selected-count"
      >
        1 selected
      </span>
      <button
        aria-label="Delete selection"
        className="btn btn-default"
        disabled={false}
        id="my-toolbar-actions-delete"
        onClick={[Function]}
        onMouseDown={[Function]}
        role={null}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="theme-tc-svg-icon tc-svg-icon"
          focusable="false"
          name="talend-trash"
          title={null}
        >
          <use
            xlinkHref="#talend-trash"
          />
        </svg>
        <span>
          Delete selection
        </span>
      </button>
    </div>
    <div
      className="theme-navbar-right navbar-right"
    >
      <ul />
    </div>
  </div>
</div>
`;

exports[`Toolbar should render display mode selector 1`] = `
<div
  className="theme-tc-list-toolbar tc-list-toolbar"
/>
`;

exports[`Toolbar should render empty toolbar 1`] = `
<div
  className="theme-tc-list-toolbar tc-list-toolbar"
/>
`;

exports[`Toolbar should render filter form 1`] = `
<div
  className="theme-tc-list-toolbar tc-list-toolbar"
/>
`;

exports[`Toolbar should render pagination 1`] = `
<div
  className="theme-tc-list-toolbar tc-list-toolbar"
/>
`;

exports[`Toolbar should render select all checkbox 1`] = `
<div
  className="theme-tc-list-toolbar tc-list-toolbar"
/>
`;

exports[`Toolbar should render sort selector 1`] = `
<div
  className="theme-tc-list-toolbar tc-list-toolbar"
/>
`;
